2022-04-14 v1.5.6 준비 - 검색기능 - 아이콘 수정 - 폰트 수정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
     <string name="search">검색</string>
     <string name="delete">삭제</string>
     <string name="see_all">전체</string>
-    <string name="no_diary">일기가 없습니다…</string>
+    <string name="no_diary">일기가 없습니다...</string>
 </resources>
