--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="naver_map_client_id">vekbsqse4r</string>
+
     <string name="app_name">1일 1일기</string>
     <string name="write"><u>작성하기</u></string>
     <string name="email">sjunh812@naver.com</string>
