--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="enter_search_keyword">검색할 내용을 입력해주세요.</string>
     <string name="within_10_characters">(10자이내로 입력해주세요.)</string>
     <string name="cancel">취소</string>
+    <string name="confirm">확인</string>
     <string name="search">검색</string>
     <string name="delete">삭제</string>
     <string name="see_all">전체</string>
