--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="search_diary">일기 검색</string>
     <string name="delete_diary">일기 삭제</string>
     <string name="mood_calendar">기분 달력</string>
+    <string name="write_diary">일기 작성</string>
+    <string name="edit_diary">일기 수정</string>
+    <string name="mood_graph">기분 통계</string>
     <string name="bookmark">즐겨찾기</string>
     <string name="delete_diary_and_cant_restore">일기를 삭제하시겠습니까?\n삭제한 일기는 복구가 불가능합니다.</string>
     <string name="enter_search_keyword">검색할 내용을 입력해주세요.</string>
