--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,17 @@
     <string name="email">sjunh812@naver.com</string>
     <string name="report">피드백</string>
     <string name="diary_list">일기 목록</string>
-    <string name="search_diary">일기 검색</string>
-    <string name="delete_diary">일기 삭제</string>
+    <string name="diary_detail">일기 상세</string>
+    <string name="diary_search">일기 검색</string>
+    <string name="diary_delete">일기 삭제</string>
+    <string name="diary_write">일기 작성</string>
+    <string name="diary_edit">일기 수정</string>
     <string name="mood_calendar">기분 달력</string>
-    <string name="write_diary">일기 작성</string>
-    <string name="edit_diary">일기 수정</string>
     <string name="mood_graph">기분 통계</string>
     <string name="bookmark">즐겨찾기</string>
-    <string name="delete_diary_and_cant_restore">일기를 삭제하시겠습니까?\n삭제한 일기는 복구가 불가능합니다.</string>
-    <string name="enter_search_keyword">검색할 내용을 입력해주세요.</string>
-    <string name="within_10_characters">(10자이내로 입력해주세요.)</string>
+    <string name="alert_delete_diary_and_cant_restore">일기를 삭제하시겠습니까?\n삭제한 일기는 복구가 불가능해요 🥲</string>
+    <string name="hint_search_keyword">검색할 내용을 입력하세요.</string>
+    <string name="hint_within_10_characters">10자 이내로 입력하세요.</string>
     <string name="cancel">취소</string>
     <string name="confirm">확인</string>
     <string name="search">검색</string>
